# aoc

./: Cargo.toml  README.md
2015/: Cargo.toml  build.rs
2015/benches/: day1.rs  day2.rs
2015/src/: day1.rs  day2.rs  lib.rs
2025/: Cargo.toml
2025/benches/: day1.rs
2025/src/: day1.rs  lib.rs
macros/: Cargo.toml
macros/src/: lib.rs  lut.rs
src/: lib.rs
src/year_2023/day_0/: mod.rs  step_1.rs  step_2.rs
src/year_2023/day_1/: mod.rs  step_1.rs  step_2.rs
src/year_2023/day_2/: step_1.rs  step_2.rs
src/year_2023/day_3/: mod.rs
utils/: Cargo.toml
utils/src/: simd.rs
