[package]
name = "aoc-2015"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc-utils = { path = "../utils/" }
aoc-macros = { path = "../macros" }
ahash = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[build-dependencies]


[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false
